--- a/card.html
+++ b/card.html
@@ -1,32 +1,30 @@
-<div class="four wide column">
-  <div class="ui card">
-    <div class="content">
-      <div class="right floated meta">{0}</div>
-    </div>
-    <div class="image">
-      <img class="ui small image" src="{1}" style="max-height:200px;object-fit: contain;">
-    </div>
-    <div class="content">
-      <span class="right floated">
-        <i class="heart red outline like icon"></i>
-        {3} likes
-      </span>
-      <i class="comment green icon"></i>
-      {2} retweets
-    </div>
-    <div class="extra">
-      {4}</br>
-    <a class="ui blue button" href="{5}">tweet</a>
-      <span class="right floated">
-        <div class="ui tiny statistic">
-          <div class="value">
-            {6}
-          </div>
-          <div class="label">
-            points
-          </div>
+<div class="ui blue card">
+  <div class="content">
+    <div class="right floated meta">{0}</div>
+  </div>
+  <div class="image">
+    <img class="ui small image" src="{1}" style="max-height:200px;object-fit: contain;">
+  </div>
+  <div class="content">
+    <span class="right floated">
+      <i class="heart red outline like icon"></i>
+      {3} likes
+    </span>
+    <i class="comment green icon"></i>
+    {2} retweets
+  </div>
+  <div class="extra">
+    {4}</br>
+  <a class="ui blue button" href="{5}">tweet</a>
+    <span class="right floated">
+      <div class="ui tiny statistic">
+        <div class="value">
+          {6}
         </div>
-      </span>
-    </div>
+        <div class="label">
+          points
+        </div>
+      </div>
+    </span>
   </div>
 </div>
