--- a/site.html
+++ b/site.html
@@ -9,33 +9,37 @@
   <body>
   	<div class="ui container">
 
-		<div class="ui divider"></div>
-      	<div class="ui container">
-		  <h2 class="ui icon center blue aligned header">
-			  <i class="settings icon"></i>
-			  <div class="content">
-				Yukari Image Searcher
-				<div class="sub header">
-					twitter上のゆかりさん画像をピックアップします
-					<div class="ui blue small label">
-					  <i class="mail icon"></i> {0}
-					</div>
-				</div>
-			  </div>
-			</h2>
+  		<div class="ui divider"></div>
 
-		</div>
+      <div class="ui inverted segment basic">
+  		  <h2 class="ui icon center blue inverted aligned header">
+  			  <i class="twitter icon"></i>
+  			  <div class="content">
+  				Yukari Image Searcher
+  				<div class="sub header">
+  					twitter上のゆかりさん画像をピックアップします
+  					<div class="ui blue small label">
+  					  <i class="mail icon"></i> {0}
+  					</div>
+  				</div>
+  			  </div>
+  			</h2>
+  		</div>
+
       <div class="ui divider"></div>
-      <div class="ui stackable grid">
+
+      <div class="ui four doubling cards">
         {2}
       </div>
-	  <div class="ui divider"></div>
+
+  	  <div class="ui divider"></div>
+
       <div class="ui raised segment">
-	  	<h2>Log</h2>
-	  	<div class="ui container">
-		  {1}
-	  	</div>
-	  </div>
+  	  	<h2>Log</h2>
+  	  	<div class="ui container">
+  		  {1}
+  	  	</div>
+  	  </div>
     </div>
   </body>
 </html>
